# roboflow-python

./: .dockerignore  .env-example  .gitignore  .pre-commit-config.yaml  .travis.yml  404.html  CHANGELOG.md  CITATION.cff  CLAUDE.md  CLI-COMMANDS.md  CONTRIBUTING.md  DEVIATIONS.md  Dockerfile  Dockerfile.dev  LICENSE  Makefile  README.md  index.html  meta.yaml  mkdocs.yml  objects.inv  pyproject.toml  requirements-slim.txt  requirements.txt  roboflowpy.py  setup.cfg  setup.py  setup_slim.py  sitemap.xml  test.py
.devcontainer/: bashrc_ext  devcontainer.json  docker-compose.yaml
.github/workflows/: publish.yml  pypi.yml  test.yml
core/dataset/: index.html
core/model/: index.html
core/project/: index.html
core/training/: index.html
core/version/: index.html
core/workspace/: index.html
docs/: index.md  styles.css
docs/core/: dataset.md  model.md  project.md  training.md  version.md  workspace.md
docs/models/: classification.md  instance-segmentation.md  object-detection.md  semantic-segmentation.md
examples/: user_metadata_example.py
models/classification/: index.html
models/instance-segmentation/: index.html
models/object-detection/: index.html
models/semantic-segmentation/: index.html
roboflow/: __init__.py  config.py  deployment.py  load.py  roboflowpy.py
roboflow/adapters/: deploymentapi.py  devicesapi.py  rfapi.py  vision_events_api.py
roboflow/archive/: plot.py
roboflow/cli/: __init__.py  _async_tasks.py  _compat.py  _output.py  _resolver.py  _table.py
roboflow/cli/handlers/: __init__.py  _aliases.py  annotation.py  api_key.py  asynctasks.py  auth.py  batch.py  completion.py  deployment.py  device.py  eval.py  folder.py  image.py  infer.py  model.py  project.py  search.py  train.py  trash.py  universe.py  version.py  video.py  vision_events.py  workflow.py  workspace.py
roboflow/core/: async_tasks.py  dataset.py  device.py  exceptions.py  model.py  model_eval.py  project.py  training.py  version.py  workspace.py
roboflow/models/: __init__.py  classification.py  clip.py  gaze.py  inference.py  instance_segmentation.py  keypoint_detection.py  object_detection.py  semantic_segmentation.py  video.py  vlm.py
roboflow/tests/: README.md  test.py
roboflow/util/: active_learning_utils.py  annotations.py  clip_compare_utils.py  folderparser.py  general.py  image_utils.py  model_processor.py  object_count_utils.py  prediction.py  train_recipe.py  two_stage_utils.py  versions.py
scripts/: generateAzureSasUrls.sh  generateGCSSignedUrls.sh  generateS3SignedUrls.sh
search/: search_index.json
tests/: README.md  __init__.py  environment.py  helpers.py  test.py  test_device.py  test_login_region.py  test_model_eval.py  test_project.py  test_queries.py  test_region_config.py  test_rfapi.py  test_search_export.py  test_slim_compat.py  test_training.py  test_version.py  test_vision_events.py  test_workspace.py  test_workspace_search.py
tests/adapters/: test_rfapi_model_evals.py  test_rfapi_phase2.py
tests/annotations/: dict_names.yaml  invalid_annotation.json  valid_annotation.json
tests/annotations/keypoint-detection-annotations/: MM2A_46_R_T_predictions.json
tests/cli/: test_aliases.py  test_annotation_handler.py  test_api_key.py  test_asynctasks_handler.py  test_auth.py  test_auth_region.py  test_backwards_compat.py  test_batch_handler.py  test_completion_handler.py  test_deployment_handler.py  test_device_handler.py  test_discovery.py  test_eval_handler.py  test_folder_handler.py  test_image_handler.py  test_infer_handler.py  test_model_handler.py  test_output.py  test_project_fork_handler.py  test_project_handler.py  test_reorder_argv.py  test_search_handler.py  test_train_handler.py  test_trash_handler.py  test_trash_polish.py  test_universe_handler.py  test_version_handler.py  test_video_handler.py  test_workflow_handler.py  test_workspace.py
tests/datasets/chess/: 0af.xml  1be.xml  55b.xml  _README.txt  a97.xml  bc5.xml  c78.xml  ce5.xml  d9a.xml  e40.xml  ec5.xml  f9a.xml
tests/datasets/corrosion-singlelabel-classification/: README.dataset.txt
tests/datasets/mosquitos/: mosquitos.csv
tests/datasets/paligemma/: README.dataset.txt
tests/datasets/paligemma/dataset/: _annotations.test.jsonl  _annotations.train.jsonl  _annotations.valid.jsonl
tests/datasets/sharks-tiny-coco/test/: _annotations.coco.json
tests/datasets/sharks-tiny-coco/train/: _annotations.coco.json
tests/datasets/sharks-tiny-coco/valid/: _annotations.coco.json
tests/datasets/sharks-tiny-createml/: README.dataset.txt
tests/datasets/sharks-tiny-createml/test/: _annotations.createml.json
tests/datasets/sharks-tiny-createml/train/: _annotations.createml.json
tests/datasets/sharks-tiny-createml/valid/: _annotations.createml.json
tests/datasets/sharks-tiny-yolov9/: README.dataset.txt  data.yaml
tests/datasets/sharks-tiny-yolov9/test/labels/: sharks_mp4-1_jpg.rf.4cfe68e1e1f580f36628ee5868b61564.txt
tests/datasets/sharks-tiny-yolov9/train/labels/: sharks_mp4-11_jpg.rf.aaf303e6eba91380d782d7c5fff1dc92.txt  sharks_mp4-13_jpg.rf.4ba3d8914eb8b4026151b3c1a8039fd7.txt  (+5 more)
tests/datasets/skinproblem-multilabel-classification/: README.dataset.txt
tests/datasets/skinproblem-multilabel-classification/test/: _classes.csv
tests/datasets/skinproblem-multilabel-classification/train/: _classes.csv
tests/datasets/skinproblem-multilabel-classification/valid/: _classes.csv
tests/images/: sky-rabbit.heic
tests/manual/: debugme.py  demo_image_metadata.py  demo_workspace_search.py  demo_zip_upload.py  download.sh  import.sh  infer.sh  login.sh  test_metadata_export.py  test_metadata_search.py  upload.sh  uselocal  useprod  usestaging  video_inference.sh
tests/models/: test_instance_segmentation.py  test_keypoint_detection.py  test_object_detection.py  test_semantic_segmentation.py  test_vlm.py
tests/output/: _parse-chess.json  parse-chess.json  sharks-tiny-coco.json
tests/util/: test_class_sorting.py  test_folderparser.py  test_image_utils.py  test_model_processor.py  test_train_recipe.py  test_versions.py
(+2 files in other folders)
