[build-system]
requires = ["setuptools>=57", "wheel"]
build-backend = "setuptools.build_meta"

[tool.flake8]
exclude = ".venv"
max-complexity = 10
max-line-length = 120
extend-ignore = """
    W503,
    E203,
    E701,
    C901,
"""
per-file-ignores = """
    __init__.py: F401
"""

[tool.bandit]
target = ["test", "roboflow"]
tests = ["B201", "B301"]

[tool.ruff]
target-version = "py38"
# Same as Black.
line-length = 120

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "F",  # pyflakes
    "I",  # isort
    "UP", # pyupgrade
]
ignore = [
    "E501", # line too long, handled by black
]

# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
    "yarn-error.log",
    "yarn.lock",
    "docs",
    "tests/manual/debugme.py", # file is intentionally broken
]


# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.per-file-ignores]
"__init__.py" = [
    "E402", # Module level import not at top of file
    "F401", # Imported but unused
]

[tool.ruff.lint.pyupgrade]
# Preserve types, even if a file imports `from __future__ import annotations`.
keep-runtime-typing = true

[tool.mypy]
python_version = "3.8"
exclude = ["^build/"]

[[tool.mypy.overrides]]
module = [
    "_datetime.*",
    # IPython is an optional dependency
    "IPython.display.*",
    # ipywidgets is an optional dependency
    "ipywidgets.*",
    # matplotlib typing is not available for Python 3.8
    # remove this when we stop supporting Python 3.8
    "matplotlib.*",
    "requests_toolbelt.*",
    "torch.*",
    "ultralytics.*",
]
ignore_missing_imports = true
