[build-system]
requires = ["setuptools>=57", "wheel"]
build-backend = "setuptools.build_meta"

[tool.bandit]
target = ["test", "roboflow"]
tests = ["B201", "B301"]

[tool.ruff]
target-version = "py38"
line-length = 120

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "A",
    "ANN",
    "ARG",
    "B",
    "BLE",
    "C",
    "COM",
    "D",
    "DTZ",
    "EM",
    "ERA",
    "FBT",
    "FIX",
    "FLY",
    "FURB",
    "ISC",
    "N",
    "PERF",
    "PIE",
    "PLR",
    "PLW",
    "PT",
    "PTH",
    "RET",
    "RUF",
    "S",
    "SIM",
    "SLF",
    "T",
    "TD",
    "TRY",
]

# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
    "yarn-error.log",
    "yarn.lock",
    "docs",
    "tests/manual/debugme.py", # file is intentionally broken
]

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.per-file-ignores]
"__init__.py" = [
    "E402", # Module level import not at top of file
    "F401", # Imported but unused
]

[tool.ruff.lint.pyupgrade]
# Preserve types, even if a file imports `from __future__ import annotations`.
keep-runtime-typing = true

[tool.ruff.lint.flake8-tidy-imports]
banned-module-level-imports = [
    "cv2",
    "matplotlib",
    "numpy",
]

[tool.mypy]
python_version = "3.8"
exclude = ["^build/"]

[[tool.mypy.overrides]]
module = [
    "_datetime.*",
    "filetype.*",
    # IPython is an optional dependency
    "IPython.display.*",
    # ipywidgets is an optional dependency
    "ipywidgets.*",
    # matplotlib typing is not available for Python 3.8
    # remove this when we stop supporting Python 3.8
    "matplotlib.*",
    "requests_toolbelt.*",
    "torch.*",
    "ultralytics.*",
]
ignore_missing_imports = true
