[metadata]
name = roboflow
version = 0.1.0
author = Roboflow
author_email = help@roboflow.com
description = The Official Python Package for Roboflow
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/SamratSahoo/roboflow-python
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.7
include_package_data = True